ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration2/input.ts.stderr
error: Unexpected token `Foo`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration2/input.ts:2:19
  |
2 |     static static Foo() { }
  |                   ^^^

